APIs for cve and epv reports
